# django-saas-kit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZATION.md  LICENSE  Makefile  README.md  SECURITY.md  _diag_test.py  conftest.py  db-test.sqlite3-journal  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  sync-labels.yml
apps/audit/: admin.py  models.py  views.py
apps/authentication/: models.py  serializers.py  social_views.py  tasks.py  token_views.py  two_factor_views.py  urls.py  views.py
apps/billing/: admin.py  models.py  tasks.py  views.py
apps/common/: celery_logging.py  celery_policy.py  exceptions.py  health_checks.py  logging_config.py  models.py  pagination.py  sentry.py  throttling.py  views.py
apps/features/: admin.py  apps.py  models.py  urls.py  views.py
apps/invitations/: models.py  serializers.py  tasks.py  views.py
config/: asgi.py  celery.py  env.py  urls.py
docs/: VERSIONING.md  background-jobs.md  feature-flags.md  gdpr.md  observability.md  performance.md  testing.md
examples/: README.md  feature_flags.py  openapi_examples.py
requirements/: base.txt  constraints.txt  local.txt  typing-stubs.txt
scripts/: ci_install_requirements.sh  verify_requirements_pins.py
services/: auth_service.py  exceptions.py  tenant_service.py  user_service.py
tests/: conftest.py
(+124 files in other folders)
